source_set("kuzu") {

  sources = [ "kuzu.h",
              "kuzu_service.h",
              "kuzu_service.cc",
              "kuzu_wrapper.cc"]

  if (is_win) {
    libs = ["//chrome/services/kuzu/libs/libkuzu-windows/kuzu_shared.lib"]
  } else if (is_mac && target_cpu == "arm64") {
    libs = ["//chrome/services/kuzu/libs/libkuzu-osx-arm64/libkuzu.dylib"]
  } else if (is_mac) {
    libs = ["//chrome/services/kuzu/libs/libkuzu-osx-intel/libkuzu.dylib"]
  } else if (is_linux) {
    libs = ["//chrome/services/kuzu/libs/libkuzu-linux/libkuzu.so"]
  } else {
    print("Error, Kuzu is not supported for this platform...")
  }

  deps = [  
            ":copy_libkuzu",
            "//base",
            "//chrome/services/kuzu/public/mojom",
        ]
}

copy("copy_libkuzu") {
  if (is_win) {
    sources = [ "libs/libkuzu-windows/kuzu_shared.dll" ]
    outputs = [ "$root_out_dir/kuzu_shared.dll" ]
  } else if (is_mac && target_cpu == "arm64") {
    sources = [ "libs/libkuzu-osx-arm/libkuzu.dylib"]
    outputs = [ "$root_out_dir/libkuzu.dylib" ]
  } else if (is_mac) {
    sources = [ "libs/libkuzu-osx-intel/libkuzu.dylib" ]
    outputs = [ "$root_out_dir/libkuzu.dylib" ]
  } else if (is_linux) {
    sources = [ "libs/libkuzu-linux/libkuzu.so" ]
    outputs = [ "$root_out_dir/libkuzu.so" ]
  } else {
    print("Error, Kuzu is not supported for this platform...")
  }
  if (is_mac) {
    configs += [ ":shared_library_public_config" ]
  }
}

config("shared_library_public_config") {
  if (is_mac && !is_component_build) {
    ldflags = [
      "-rpath",
      "@loader_path/Libraries"
    ]
    if (build_with_chromium) {
      ldflags += [
        "-Wl,-rpath,@loader_path/.",
      ]
    }
  }
}
